Bug 2012818 - Hide Translations settings when hidden by AI Controls  a=dmeehan
Original Revision: https://phabricator.services.mozilla.com/D280693

Differential Revision: https://phabricator.services.mozilla.com/D281017

--- a/browser/themes/shared/preferences/preferences.css
+++ b/browser/themes/shared/preferences/preferences.css
@@ -1090,6 +1090,7 @@ dialog > .sync-engines-list + hbox {
   text-overflow: ellipsis;
 }
 
+.setting-hidden,
 .visually-hidden {
   display: none !important;
 }
